# trauma-training-data

./: .gitattributes  .gitignore  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CITATION.cff  CITATIONs.cff  CLAUDE.md  CLEANUP_ACTION_PLAN.md  IMPROVEMENTS.md  LICENSE  MODEL_SPECIFICATIONS.md  PAPER_ENHANCEMENTS_V1.1.0.md  PAPER_ENHANCEMENTS_V1.3.0.md  README.md  V1.0_RELEASE_REPORT.md  V1.2.0_RELEASE_SUMMARY.md  ZENODO_METADATA.txt  pyproject.toml  run_all_experiments.sh  trauma-training-data-essay-v2.0.3.tex  trauma-training-data-essay.md  trauma-training-data-essay.tex  trauma-training-data.bib  trauma_paper_references.csv  trauma_references.bib
trauma-models/: .gitignore  ARCHITECTURE_SUMMARY.md  CITATION.cff  GIT_INIT_COMMANDS.sh  IMPLEMENTATION_GUIDE.md  MODEL_SPECIFICATIONS.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt
trauma-models/experiments/: limited_dataset_sweep.yaml  noisy_signals_sweep.yaml
trauma-models/legacy/debugging/: model1_overcorrection_root_cause.md
trauma-models/legacy/fixes/: model1_before_after_comparison.md  model1_before_after_consolidated.md  model1_overcorrection_fix_summary.md
trauma-models/legacy/milestones/: 20251026_publication_ready_summary.md  (+5 more)
trauma-models/paper-figures/: FIGURES_MANIFEST.md
trauma-models/scripts/: analyze_model4_results.py  run_robust_model3.py
trauma-models/supplementary/: model1_boundary_sensitivity_full.md
trauma-models/tests/: __init__.py  conftest.py  test_gradient_cascade.py  test_model_architectures.py  test_reproducibility.py  test_statistical_significance.py
(+57 files in other folders)
